// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmEmailPage ionViewWillEnter on failed promise with client error 1`] = `
<page-confirm-email
  clickMessage={[Function String]}
  confirmKey={[Function String]}
  linkText={[Function String]}
  navCtrl={[Function Object]}
  route={[Function Object]}
  showResendLink="false"
  thankYouMessage={[Function String]}
  toastProvider={[Function Object]}
  userProvider={[Function Object]}
>
  <ion-header>
    <draught-header />
  </ion-header><ion-content
    class="ion-padding"
  >
    <ion-row>
      <ion-col
        class="below-header ion-text-justify"
        offsetlg="3"
        offsetmd="2"
        offsetsm="1"
        offsetxl="4"
        size="12"
        sizelg="6"
        sizemd="8"
        sizesm="10"
        sizexl="4"
      >
        <div
          class="ion-text-center"
        >
          <p>
            Thank you for confirming your email!
          </p>
          <p>
            Please click the link below to sign in.
          </p>
          <a
            class="pointer underline ion-text-center"
          >
            Sign in.
          </a>
        </div>
      </ion-col>
    </ion-row>
  </ion-content>
</page-confirm-email>
`;

exports[`ConfirmEmailPage ionViewWillEnter on failed promise with non client error 1`] = `
<page-confirm-email
  clickMessage={[Function String]}
  confirmKey={[Function String]}
  linkText={[Function String]}
  navCtrl={[Function Object]}
  route={[Function Object]}
  showResendLink="false"
  thankYouMessage={[Function String]}
  toastProvider={[Function Object]}
  userProvider={[Function Object]}
>
  <ion-header>
    <draught-header />
  </ion-header><ion-content
    class="ion-padding"
  >
    <ion-row>
      <ion-col
        class="below-header ion-text-justify"
        offsetlg="3"
        offsetmd="2"
        offsetsm="1"
        offsetxl="4"
        size="12"
        sizelg="6"
        sizemd="8"
        sizesm="10"
        sizexl="4"
      >
        <div
          class="ion-text-center"
        >
          <p>
            Thank you for confirming your email!
          </p>
          <p>
            Please click the link below to sign in.
          </p>
          <a
            class="pointer underline ion-text-center"
          >
            Sign in.
          </a>
        </div>
      </ion-col>
    </ion-row>
  </ion-content>
</page-confirm-email>
`;

exports[`ConfirmEmailPage should initialize the ConfirmEmailPage 1`] = `
<page-confirm-email
  clickMessage={[Function String]}
  confirmKey="undefined"
  linkText={[Function String]}
  navCtrl={[Function Object]}
  route={[Function Object]}
  showResendLink="false"
  thankYouMessage={[Function String]}
  toastProvider={[Function Object]}
  userProvider={[Function Object]}
>
  <ion-header>
    <draught-header />
  </ion-header><ion-content
    class="ion-padding"
  >
    <ion-row>
      <ion-col
        class="below-header ion-text-justify"
        offsetlg="3"
        offsetmd="2"
        offsetsm="1"
        offsetxl="4"
        size="12"
        sizelg="6"
        sizemd="8"
        sizesm="10"
        sizexl="4"
      >
        <div
          class="ion-text-center"
        >
          <p>
            Thank you for confirming your email!
          </p>
          <p>
            Please click the link below to sign in.
          </p>
          <a
            class="pointer underline ion-text-center"
          >
            Sign in.
          </a>
        </div>
      </ion-col>
    </ion-row>
  </ion-content>
</page-confirm-email>
`;
